--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,14 @@ body {
     width: 100vw;
     background: linear-gradient(to bottom, rgb(0,150,136) 0 15%, rgb(219,219,212) 15% 85%);
     padding-top: 2vh;
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
 #root {
     width: 80vw;
     min-width: 600px;
     height: calc(100vh - (2vh * 2));
-    min-height: 500px;
+    min-height: 600px;
     margin: 0 auto;
     background-color: white;
 }
@@ -25,6 +26,14 @@ body {
 /* /selettori preliminari */
 
 /* classi generiche */
+
+i {
+    color: grey;
+}
+
+input {
+    font-family: 'Noto Sans KR', sans-serif;
+}
 
 .header-style {
     height: 10%;
@@ -44,31 +53,82 @@ body {
 }
 /* /provvisorio */
 
+.circle-style {
+    position: relative;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background-color: lightgrey;
+}
+.circle-style > * {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.general-text-area-style {
+    border-radius: 5px;
+    background-color: white;
+    border: none;
+}
+
 /* /classi generiche */
 
 /* selettori specifici */
 
-[id$='-content'] {
+#root > [id$='-content'] {
     float: left;
     height: 100%;
 }
 #left-content {
-    width: 30%;
+    width: 40%;
 }
 #right-content {
-    width: calc(100% - 30%);
+    width: calc(100% - 40%);
 }
+
+/* left */
 
 #notifications {
     height: 10%;
     width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     background-color: rgb(142,218,252);
+    font-size: 0.8em;
+}
+#notifications .circle-style i {
+    font-size: 1.2em;
+}
+#notifications div:last-child {
+    width: 80%;
 }
 
 #search-chat {
     height: 5%;
     width: 100%;
-    background-color: lightgray;
+    padding: 5px;
+    background-color: lightgrey;
+}
+#search-chat .general-text-area-style {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+/* generalizzare qualcosa dai prossimi due selettori? */
+#search-chat input {
+    width: 80%;
+    border: none;
+    font-size: 0.6em;
+    padding: 0.2em;
+    color: grey;
+}
+#search-chat i {
+    font-size: 0.8em;
 }
 
 #chats {
@@ -77,8 +137,42 @@ body {
     overflow-y: scroll;
     background-color: white;
 }
-#chats::-webkit-scrollbar {
+/* #chats::-webkit-scrollbar { */
     /* lo tengo se devo fare qualcosa più tardi */
+/* } */
+
+/* /left */
+
+/* right */
+
+#chat-content {
+    min-height: calc(100% - 10% - 10%);
+    width: 100%;
+    overflow-y: scroll;
+    background-image: url('../img/mine.jpg');
 }
+/* #chat-content::-webkit-scrollbar { */
+    /* lo tengo se devo fare qualcosa più tardi */
+/* } */
+
+#send {
+    height: 10%;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 5px 10px;
+    background-color: lightgrey;
+}
+#send .general-text-area-style {
+    width: 80%;
+    height: 100%;
+    padding: 10px;
+}
+#send i {
+    font-size: 1.2em;
+}
+
+/* /right */
 
 /* /selettori specifici */
