--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ input, ul {
 }
 .person-style .person-info .person-name,
 .person-style .person-info .person-last-text {
+    width: 90%;
     height: 25px;
     line-height: 25px;
 }
@@ -250,6 +251,24 @@ ul[class*='-menu'] li {
 #chats .person-style .person-info {
     position: relative;
     width: calc(100% - 20px - 50px);
+}
+#chats .person-info .person-notification {
+    position: absolute;
+    right: 0;
+    bottom: 5px;
+    height: 25px;
+    line-height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    background-color: rgb(37,211,102);
+    text-align: center;
+    font-size: 0.7em;
+    font-weight: bold;
+    color: white;
+    visibility: hidden;
+}
+#chats .person-info .person-notification.visible {
+    visibility: visible;
 }
 
 /* /left */
