--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@ body {
     width: 80vw;
     min-width: 700px;
     height: calc(100vh - (2vh * 2));
-    min-height: 600px;
+    /* min-height: 600px; */
+    min-height: 400px;
     margin: 0 auto;
     background-color: white;
 }
@@ -56,7 +57,7 @@ input, ul {
 }
 .person-style .person-info .person-name,
 .person-style .person-info .person-last-text {
-    width: 90%;
+    /* width: 90%; */
     height: 25px;
     line-height: 25px;
 }
